# mcm-montreal

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  NOTES.md  PLANS.md  README.md  app.py  biome.json  future.md  package-lock.json  package.json  plan.md  pyproject.toml  pyrightconfig.json  research.md  wrangler.jsonc
.github/workflows/: lint.yml
docs/: architecture.md  operations.md  roadmap-history.md
mcm/: README.md  analytics.py  app.py  d1.py  db.py  i18n.py  identity.py  locations.py  maps.py  refresh.py  repository.py  repository_analytics.py  repository_catalog.py  repository_design.py  repository_refresh.py  saved_searches.py  schema.sql  seed_data.py  seo.py  source_definitions.py  source_enrichment.py  source_types.py  source_utils.py  sources.py
mcm/locales/: __init__.py  en.py  fr.py
migrations/: 0001_initial.sql  0002_drop_legacy_favourites.sql  0003_refresh_jobs.sql  0004_listing_availability_events.sql  0005_refresh_job_chunks.sql  0006_anonymous_identity.sql  0007_saved_searches.sql  0008_listing_price_events.sql  0009_shop_addresses.sql  0010_shop_wordmarks.sql  0011_analytics_page_views.sql  0012_design_entities.sql  0013_design_entity_candidate_reviews.sql  0014_deactivate_bond_vintage.sql
scripts/: audit-refresh-jobs.sh  check-production.sh  start.sh
src/: worker.js
static/: app.css  app.js  manifest.webmanifest  service-worker.js
templates/: 404.html  README.md  _favourite_listing_button.html  _favourite_listing_count.html  _favourite_shop_button.html  _filters.html  _listing_cards.html  _listing_grid.html  _shop_map.html  about.html  admin.html  admin_analytics.html  admin_design_entities.html  admin_listing.html  base.html  favourites.html  listing_detail.html  listings.html  offline.html  privacy.html  shop_detail.html  shops.html
tests/: support.py  test_analytics.py  test_app.py  test_app_routes.py  test_favourites.py  test_infrastructure.py  test_refresh.py  test_repository_catalog.py  test_repository_design.py  test_sources.py  worker_queue_test.mjs
