[project]
name = "mcm-montreal"
version = "0.3.0"
description = "Montreal-first discovery app for vintage and resale mid-century modern furniture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "flask==3.1.3",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "djlint>=1.39.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["mcm"]
omit = ["mcm/seed_data.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 100
extension = "html"
ignore = "H006,H030,H031,T003"

[tool.setuptools.packages.find]
include = ["mcm*"]
